Fix PROD4POD-388 - cut off text

--- a/features/polyExplorer/src/components/infographic/infographic.css
+++ b/features/polyExplorer/src/components/infographic/infographic.css
@@ -29,12 +29,12 @@
 .infographic .jurisdiction-white {
     color: white;
     white-space: nowrap;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 6;
 }
 
 .infographic .jurisdiction-blue {
     white-space: nowrap;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 6;
 }
